+ features
* bugfixes
====================== 0.9.24 ======================
Game:
 + New weapon: Minigun
 + Change weapon icons: Mudball, air mine
 + Add healing visual effect in Paramedics mode and a few scripts
 + Show remaining ammo when using Birdy egg or RC Plane bomb
 + Add separate control for team chat (default: U)
 + Add separate control for changing hedgehog tags (default: Home)
 + Toggle all hedgehog tags at once with [Precise] + [Change hedgehog tags]
 + Hedgehog tag translucency is now changed with [Switch] + [Change hedgehog tags]
 * Fix time box being usable in Sudden Death with 0 health decrease
 * Fix chat input key being sometimes registered twice
 * Fix not displaying current volume status after pressing mute key
 * Fix many effects not being correctly recorded by the video recorder
 * Fix quit menu showing incorrect keys if using non-default key bindings
 * Fix script translations not being loaded for Portuguese and Chinese
 * When using seduction, only show “CENSORED” text in English locale

Frontend:
 + Migrate to Qt 5
 + Schemes are now stored in separate files under Schemes
 + Add default directory DrawnMaps for hand-drawn maps
 + Lead player to training missions when starting Hedgewars the first time
 * Fix map preview, map name, style name not being displayed if host selects map or style you don't have
 * Remove “Upload to YouTube” functionality (it was broken for years)
 * Fix broken preview of team hats (e.g. cap_team)
 * Fix chart in stats screen not supporting negative numbers

Content:
 + New scenarios: Bazooka Battlefield, Tentacle Terror
 + New basic training mission: Movement
 + Completely redo basic training missions: Bazooka, Grenade, Rope
 + Major overhaul of Sudden Death visuals in most themes
 + New flag: uk_scotland
 + New voice: Default_pl (Polish)
 + New voice: Russian_pl (Polish with a Russian accent)
 + Add theme icons for: Blox, CrazyMission, Deepspace, Eyes, Planes

Styles and game modes: